does dom cardio

--- a/exercises/20 - The DOM/DOM-Cardio.html
+++ b/exercises/20 - The DOM/DOM-Cardio.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Dom Cardio</title>
   <link rel="stylesheet" href="../../base.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/solid.css"
+    integrity="sha256-wMES50JHO82E/LjWWLWeCXXQahHeA0oemqGIfMkD5BI=" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -17,6 +19,10 @@
       grid-template-columns: repeat(4, 1fr);
       grid-gap: 20px;
       padding: 20px;
+    }
+
+    i {
+      color: red;
     }
 
     .playerCard {
