hides and shows tabs

--- a/exercises/36 - Tabs/index.html
+++ b/exercises/36 - Tabs/index.html
@@ -13,22 +13,22 @@
   <div class="wrapper">
     <div class="tabs">
       <div role="tablist" aria-label="Programming Languages">
-        <button role="tab" aria-selected="true" id="js">
+        <button role="tab" id="js">
           JavaScript
         </button>
-        <button role="tab" aria-selected="false" id="ruby">Ruby
+        <button role="tab" id="ruby">Ruby
         </button>
-        <button role="tab" aria-selected="false" id="php">
+        <button role="tab" id="php">
           PHP
         </button>
       </div>
       <div role="tabpanel" aria-labelledby="js">
         <p>JavaScript is great!</p>
       </div>
-      <div role="tabpanel" aria-labelledby="ruby" hidden>
+      <div role="tabpanel" aria-labelledby="ruby">
         <p>Ruby is great</p>
       </div>
-      <div role="tabpanel" aria-labelledby="php" hidden>
+      <div role="tabpanel" aria-labelledby="php">
         <p>PHP is great!</p>
       </div>
     </div>
